style: fix padding none on mobile

--- a/packages/mz-client/src/styles/CommentList.module.scss
+++ b/packages/mz-client/src/styles/CommentList.module.scss
@@ -1,5 +1,11 @@
+@import "_module";
+
 .block {
   padding: 16px;
+
+  @include tablet {
+    padding: 16px 0;
+  }
 }
 
 .comment_title {
