--- a/packages/mz-client/src/styles/ItemViewer.module.scss
+++ b/packages/mz-client/src/styles/ItemViewer.module.scss
@@ -24,6 +24,10 @@
   padding: 16px;
   border-bottom: 1px solid $gray0;
   position: relative;
+
+  @include tablet {
+    padding: 16px 0;
+  }
 }
 
 .morevert_container {
